Building out the results page

--- a/app/views/static/start.html.erb
+++ b/app/views/static/start.html.erb
@@ -54,7 +54,7 @@
               <label for="track_length">Length of track (m)</label>
             </div>
             <div class="input-field col s6">
-              <input id="track_incline" type="text" name="mine[track_length]" class="validate">
+              <input id="track_incline" type="text" name="mine[track_incline]" class="validate">
               <label for="track_incline">Incline of track (degrees)</label>
             </div>
           </div>
