--- a/app/views/static/start.html.erb
+++ b/app/views/static/start.html.erb
@@ -31,7 +31,7 @@
 <div class="section">
   <div class="container">
     <div class="row">
-      <%= form_tag("/results", method: "post", class: "col s12") do %>
+      <form accept-charset="UTF-8" action="/results" class="col s12" data-remote="true" id="new_results" method="post">
           <div class="row">
             <div class="input-field col s6">
               <input id="mine_name" type="text" name="mine[name]" class="validate">
@@ -68,7 +68,9 @@
           <div class="row center">
               <input name="commit" type="submit" value="Estimate" class="btn-large waves-effect waves-light teal lighten-1"/>
           </div>
-        <% end %>
-      </div>
+      </form>
+    </div>
+    <div id="results">
+    </div>
   </div>
 </div>
