--- a/app/views/static/start.html.erb
+++ b/app/views/static/start.html.erb
@@ -9,7 +9,7 @@
         <div class="col s12 m12">
           <div class="card large">
             <div class="card-image">
-              <img src="http://www.durangotrain.com/sites/default/files/images/OldHundred%20mine%20YLashmett%201%20WM.jpg">
+              <img src="https://s3-us-west-2.amazonaws.com/gabe-random/mine_pic.jpg">
             </div>
             <div class="card-tabs">
               <ul class="tabs tabs-fixed-width">
@@ -36,6 +36,10 @@
             <div class="input-field col s6">
               <input id="mine_name" type="text" name="mine[name]" class="validate">
               <label for="mine_name">Mine name</label>
+            </div>
+            <div class="input-field col s6">
+              <%= select_tag :state, options_for_select(us_states), include_blank: true %>
+              <label>State Select</label>
             </div>
           </div>
           <div class="row">
