--- a/app/views/static/_results.html.erb
+++ b/app/views/static/_results.html.erb
@@ -1,14 +1,16 @@
-<div class="row">
-  <div class="col s12 m12">
-    <div class="card blue-grey darken-1">
-      <div class="card-content white-text">
-        <span class="card-title">Estimate</span>
-        <p><%= @results %> total KW storage</p>
-      </div>
-      <div class="card-action">
-        <a href="#">This is a link</a>
-        <a href="#">This is a link</a>
-      </div>
+<div class="card">
+  <div class="card-content">
+    <span class="card-title"><h4>Estimate</h4></span>
+    <h4><%= @results.kw_storage %> total KW storage</h4>
+  </div>
+  <div class="card-content grey lighten-4">
+    <div id="test4">
+      <h5>Estimate Breakdown</h5>
+      We have calculated that your carts have total mass of <%= @results.mass %> kgs.
+      Given the length and incline, the carts will decend a total of <%= @results.height %> meters. This has <%= @results.joules %> in potential energy. We have also adjusted for some efficiency loss.
+
+      <h5>Savings Breakdown</h5>
+      ...
     </div>
   </div>
 </div>
