--- a/app/views/static/start.html.erb
+++ b/app/views/static/start.html.erb
@@ -38,7 +38,7 @@
               <label for="mine_name">Mine name</label>
             </div>
             <div class="input-field col s6">
-              <%= select_tag :state, options_for_select(us_states), include_blank: true %>
+              <%= select_tag :state, options_for_select(us_states), name: "mine[state]", include_blank: true %>
               <label>State Select</label>
             </div>
           </div>
