Add savings per year

--- a/app/views/static/_results.html.erb
+++ b/app/views/static/_results.html.erb
@@ -1,7 +1,7 @@
 <div class="card">
   <div class="card-content">
-    <span class="card-title"><h4>Estimate</h4></span>
-    <h4><%= @results.kw_storage %> total KW storage</h4>
+    <h4>Estimated <%= @results.kw_storage %> total KW storage</h4>
+    <h4>Estimated $<%= @results.california_savings %> in savings per year</h4>
   </div>
   <div class="card-content grey lighten-4">
     <div id="test4">
