--- a/app/views/static/start.html.erb
+++ b/app/views/static/start.html.erb
@@ -63,7 +63,8 @@
             </div>
           </div>
           <div class="row center">
-              <input name="commit" type="submit" value="Estimate" class="btn-large waves-effect waves-light teal lighten-1"/>
+            <button class="btn waves-effect waves-light teal lighten-1" type="submit" name="action">Estimate
+            </button>
           </div>
       </form>
     </div>
