--- a/app/views/static/start.html.erb
+++ b/app/views/static/start.html.erb
@@ -19,7 +19,7 @@
             </div>
             <div class="card-content grey lighten-4">
               <div id="test4"><p>During the day when renewables like solar are producing excess energy, we use that energy to push the carts up the hill at the mine.</p></div>
-              <div id="test5"><p>During the night or other peak hours, the system will slowly let the cart slide down the rails, producing energy back into the grid when it needs it most. Similar to how a cuckoo clock works!</p></div>
+              <div id="test5"><p>During the night or other peak hours, the system will slowly let the cart slide down the rails, producing energy back into the grid when it needs it most.</p></div>
             </div>
             <br><br>
             <!-- <img src="http://cdn.powermag.com/wp-content/uploads/2011/04/520004ddba5b8-040111_SR_Storage_Fig4.jpg"> -->
