--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -4,7 +4,7 @@
       <br><br>
       <h1 class="header center text-lighten-2">Gravity Labs</h1>
       <div class="row center">
-        <h5 class="header col s12 light">Retrofitting abandonded mines for clean energy storage</h5>
+        <h5 class="header col s12 light">Retrofitting abandonded mines for energy storage</h5>
       </div>
       <div class="row center">
         <a href="/start" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
@@ -70,8 +70,9 @@
     <div class="row">
       <div class="col s12 center">
         <h3><i class="mdi-content-send brown-text"></i></h3>
-        <h4>Contact Us</h4>
-        <p class="left-align light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque id nunc nec volutpat. Etiam pellentesque tristique arcu, non consequat magna fermentum ac. Cras ut ultricies eros. Maecenas eros justo, ullamcorper a sapien id, viverra ultrices eros.</p>
+        <button class="btn waves-effect waves-light" type="submit" name="action">Contact Us
+          <i class="material-icons right">send</i>
+        </button>
       </div>
     </div>
 
